# phd2030

./: .gitignore  README.md  main.py  pyproject.toml
courses/: 597_hw1_1.ipynb  597_hw1_2ab.ipynb  597_hw1_2cd.ipynb  597_hw2_1b_gradient.ipynb  597_hw2_1b_newton.ipynb  597_hw2_2.ipynb  597_hw2_4.ipynb  597_hw2_5.ipynb  597_hw3_1.ipynb
playtorch/: playtorch_182.ipynb  playtorch_mlp.ipynb
