[project]
name = "phd2030"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyomo>=6.9.5",
    "scipy>=1.16.3",
    "torch>=2.9.1",
]
